# Project_Pleiades

./: README.md  docker-compose.prod.yml  docker-compose.yml  langgraph.json  main.tf  pyproject.toml  settings.py
.github/workflows/: pleiades_backend.yml  pleiades_core.yml  pleiades_scheduler.yml
apps/playground/: main.py
apps/pleiades_backend/: README.md  package.json
apps/pleiades_backend/src/plugins/: plugins.service.ts
apps/pleiades_core/: .env.example  Dockerfile  __init__.py  containers.py  main.py
apps/pleiades_core/services/: __init__.py  process_user_message_service.py
apps/pleiades_scheduler/: .env.example  Dockerfile  main.py
apps/studio/: __init__.py  main.py
libs/community/adapters/: mock_adapter.py  redis_send_wait_adapter.py
libs/community/helpers/: tools.py
libs/community/plugins/coin_observer/: __init__.py  crons.py  tools.py  utilities.py
libs/community/plugins/coin_technical_analyzer/: __init__.py  crons.py  tools.py  utilities.py
libs/core/: README.md  pyproject.toml
libs/core/pleiades_core/crons/: __init__.py  registry.py
libs/core/pleiades_core/graph/: __init__.py  base.py  chains.py  prompts.py  routers.py  states.py  tools.py  utils.py
libs/core/pleiades_core/plugins/: README.md  __init__.py  base.py  registry.py
libs/core/pleiades_core/plugins/tools/: __init__.py  base.py  response_dumper_base.py
libs/core/pleiades_core/plugins/utilities/: __init__.py  blockchain.py  llm.py  mock.py  remote.py
libs/repositories/: coins_delta_lake_repository.py
libs/utils/redis/: schemas.py
(+25 files in other folders)
